--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,27 @@ body {
     font-size: 1.2em;
 }
 
+/* label focus color */
+.input-field input:focus + label {
+    color: #303F9F !important;
+}
+/* label underline focus color */
+.input-field input:focus, .input-field input:active {
+    border-bottom: 1px solid #303F9F !important;
+    box-shadow: 0 1px 0 0 #303F9F !important
+}
+
+.ratingModal {
+    /* width: 40%; */
+}
+
+.movie-rating ul {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+
 .header {
     margin: .3em auto;
     text-align: center;
@@ -31,7 +52,7 @@ body {
     display: block;
     width: 50%;
     /* border for debugging */
-    border: 1px solid #f66b74;
+    border: 1px solid rgba(48, 65, 159, 0.705);
     /* border-bottom-left-radius: 16px; */
     /* border-bottom-right-radius: 16px; */
     border-radius: 16px;
@@ -40,11 +61,11 @@ body {
 
 .login__header {
     padding: .2em;
-    margin: -.5em;
+    margin: -.6em;
     margin-bottom: .5em;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
-    background-color: #f66b74;
+    background-color: #303F9F;
     color: white;
 }
 
@@ -53,7 +74,21 @@ body {
     margin-bottom: .2em;
 }
 
+.search {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.1em;
+}
 
+.search__input {
+    /* margin-right: 1%; */
+    padding-left: .8em;
+}
+
+.search__buttons {
+    margin-top: .9em;
+}
 
 .movieResults {
     /* border for debugging */
